--- a/app/templates/Healty.html
+++ b/app/templates/Healty.html
@@ -43,7 +43,7 @@
 
     <div>
         <br>
-        <h1 style="text-align:center" class="fw-semi-bold mb-4">Prediksi&nbsp;<span class="text-light"> Penyakit </span> &nbsp; Daun Cabai & Obatnya</h1>
+        <h1 style="text-align:center" class="fw-semi-bold mb-4">Prediksi&nbsp;<span class="text-light"> Penyakit </span> &nbsp; Daun Cabai & Penangananya</h1>
     </div>
 
    <br>
@@ -70,11 +70,13 @@
                 </div>
                 <div class="details">
 					
-					<h4><b> Treatment : </b> </h4>
+					<h4><b> Perawatan : </b> </h4>
                     <h6>
-
-					Many fungicides are registered to control of target spot on Chilies. Growers should consult regional disease management guides for recommended products. Products containing chlorothalonil, mancozeb, and copper oxychloride have been shown to provide good control of target spot in research trials
-					
+                        Berikut adalah beberapa langkah untuk menjaga tanaman cabai tetap sehat:
+                        <p>1.Pemilihan Varietas yang Tepat: Pilih varietas cabai yang memiliki ketahanan terhadap penyakit dan hama tertentu. Perhatikan juga faktor adaptasi varietas terhadap lingkungan tumbuh di area Anda.</p>
+                        <p>Persiapan Lahan yang Baik: Pastikan lahan persiapan telah dilakukan dengan baik, termasuk pemupukan dan perbaikan struktur tanah. Tanah yang subur dan baik drainasenya akan membantu pertumbuhan tanaman cabai yang sehat.</p>
+                        <p>Penyiraman yang Tepat: Berikan penyiraman secara teratur dan cukup, namun hindari kelebihan air yang bisa menyebabkan akar membusuk. Jaga kelembaban tanah dengan penyiraman yang konsisten, terutama pada musim kering.</p>
+                        <p>Pemupukan yang Teratur: Berikan pemupukan secara teratur sesuai dengan kebutuhan tanaman cabai. Pilih pupuk organik atau pupuk buatan yang mengandung nutrisi penting seperti nitrogen, fosfor, dan kalium. Perhatikan dosis dan frekuensi pemupukan yang disarankan.</p>
 					<br>
 
                     </h6>
