--- a/app/templates/Leaf_crul.html
+++ b/app/templates/Leaf_crul.html
@@ -43,7 +43,7 @@
 
     <div>
         <br>
-        <h1 style="text-align:center" class="fw-semi-bold mb-4">Prediksi&nbsp;<span class="text-light"> Penyakit </span> &nbsp; Daun Cabai & Obatnya</h1>
+        <h1 style="text-align:center" class="fw-semi-bold mb-4">Prediksi&nbsp;<span class="text-light"> Penyakit </span> &nbsp; Daun Cabai & Penangananya</h1>
     </div>
 
    <br>
@@ -70,10 +70,15 @@
                 </div>
                 <div class="details">
 					
-					<h4><b> Treatment : </b> </h4>
+					<h4><b> Perawatan : </b> </h4>
                     <h6>
 
-					Many fungicides are registered to control of target spot on Chilies. Growers should consult regional disease management guides for recommended products. Products containing chlorothalonil, mancozeb, and copper oxychloride have been shown to provide good control of target spot in research trials
+                        Penyakit leaf curl pada cabai, juga dikenal sebagai penyakit keriting daun cabai, disebabkan oleh infeksi virus. Penyakit ini dapat menyebabkan kerugian besar pada pertanian cabai karena mengganggu pertumbuhan dan mengurangi hasil panen. Untuk mengatasi penyakit leaf curl pada cabai, diperlukan tindakan pengendalian yang terintegrasi, termasuk tindakan budidaya, sanitasi, dan penggunaan agen pengendalian hayati. Berikut adalah beberapa langkah yang dapat diambil untuk menangani penyakit leaf curl pada cabai secara efektif:
+<p>1. Pemilihan bibit yang sehat</p>
+<p>2. Sanitasi</p>
+<p>3. Pengelolaan serangga vektor </p>
+<p>4. Pembatasan gulma</p>
+<p>8. Pemupukan yang seimbang</p>
 					
 					<br>
 
