--- a/app/templates/Leaf_spot.html
+++ b/app/templates/Leaf_spot.html
@@ -42,7 +42,7 @@
 
     <div>
         <br>
-        <h1 style="text-align:center" class="fw-semi-bold mb-4">Prediksi&nbsp;<span class="text-light"> Penyakit </span> &nbsp; Daun Cabai & Obatnya</h1>
+        <h1 style="text-align:center" class="fw-semi-bold mb-4">Prediksi&nbsp;<span class="text-light"> Penyakit </span> &nbsp; Daun Cabai & Penangananya</h1>
     </div>
 
    <br>
@@ -69,11 +69,17 @@
                 </div>
                 <div class="details">
 					
-					<h4><b> Treatment : </b> </h4>
+					<h4><b> Perawatannya : </b> </h4>
                     <h6>
 
-					Many fungicides are registered to control of target spot on Chilies. Growers should consult regional disease management guides for recommended products. Products containing chlorothalonil, mancozeb, and copper oxychloride have been shown to provide good control of target spot in research trials
-					
+                        Penyakit leaf spot adalah salah satu penyakit terpenting yang menyerang cabai, penyakit ini distimulir oleh kondisi lembab dan suhu relatif tinggi. Penyakit bercak daun cabai dapat menyebabkan kerusakan sejak dari persemaian sampai tanaman cabai berbuah dan juga menyebabkan masalah serius terhadap perkembangan tanaman cabai.
+                        Serangan jamur ini berkembang pesat pada saat musim hujan dengan kondisi lahan yang lembab, sehingga perlu adanya pengaturan jarak tanam yang lebih lebar untuk mengatur kelembabannya.
+                        <p>Pengendalian secara mekanis dilakukan dengan mencabut atau memusnahkan tanaman yang terserang, melakukan rotasi tanaman, serta menanam bibit yang bebas penyakit pada lahan yang tidak terkontaminasi penyakit. Selain itu lakukan pula sanitasi kebun, penyiangan atau pembersihan gulma di sekitar tanaman untuk mengurangi kelembaban di areal sekitar penanaman. Keberadaan gulma ini juga bisa menjadi tanaman inang bagi hama penyakit.</p>
+                        <p>Sedangkan pengendalian secara kimiawi adalah pengendalian dengan menggunakan zat kimia. Karena penyakit bercak daun cabai ini disebabkan oleh jamur atau cendawan, maka pengendaliannya dapat dilakukan dengan menyemprotkan fungisida.</p>
+                        <p>Fungisida yang digunakan adalah fungisida sistemik dengan bahan aktif azoksistrobin dan difenokonazol.</p>
+                        <p>Adapun dosisnya adalah 10 ml per 16 liter air atau sesuaikan saja dengan dosis yang tertera pada label kemasan.</p>
+                        <p>Cara aplikasinya adalah dengan menyemprotkannya pada seluruh bagian tanaman baik itu tanaman yang sudah terinfeksi ataupun tanaman sehat.</p>
+                           
 					<br>
 
                     </h6>
