--- a/app/templates/Whitely.html
+++ b/app/templates/Whitely.html
@@ -45,7 +45,7 @@
 
     <div>
         <br>
-        <h1 style="text-align:center" class="fw-semi-bold mb-4">Prediksi&nbsp;<span class="text-light"> Penyakit </span> &nbsp; Daun Cabai & Obatnya</h1>
+        <h1 style="text-align:center" class="fw-semi-bold mb-4">Prediksi&nbsp;<span class="text-light"> Penyakit </span> &nbsp; Daun Cabai & Penangananya</h1>
     </div>
 
    <br>
@@ -72,10 +72,16 @@
                 </div>
                 <div class="details">
 					
-					<h4><b> Treatment : </b> </h4>
+					<h4><b> Perawatannya : </b> </h4>
                     <h6>
-
-					Many fungicides are registered to control of target spot on Chilies. Growers should consult regional disease management guides for recommended products. Products containing chlorothalonil, mancozeb, and copper oxychloride have been shown to provide good control of target spot in research trials
+                        Whitefly adalah Hama dan penyakit yang umum menyerang tanaman cabai adalah hama Thrips (Thrips parvispinus Karny) dan kutu daun (Aphididae). Thrips menyerang tanaman dengan menghisap cairan pada permukaan bawah daun, menyebabkan perubahan warna, mengerut, dan kematian daun. Hama ini juga menjadi vektor penyebaran penyakit virus pada tanaman cabai. Kutu daun, di sisi lain, menyerang pucuk dan daun muda tanaman, menyebabkan kerusakan berupa penggulungan dan pertumbuhan terhambat.
+                        Beberapa cara pengendalian hama dan penyakit pada tanaman cabai yang dapat dilakukan antara lain:
+                        <p>1.     Penggunaan tanaman perangkap seperti kenikir kuning dan mulsa perak untuk menarik hama dan mencegah penyebaran.</p>
+                        <p>2.     Sanitasi lingkungan dengan membuang bagian tanaman yang terserang thrips.</p>
+                        <p>3.     Penggunaan perangkap warna kuning yang dipasang di sekitar tanaman untuk menarik dan menangkap thrips. Perangkap ini perlu diganti jika sudah penuh dengan hama.</p>
+                        <p>4.     Pemanfaatan musuh alami seperti predator serangga dan patogen yang dapat membantu mengendalikan populasi thrips.</p>
+                        <p>5.     Penggunaan pestisida hanya jika populasi hama mencapai ambang pengendalian atau metode pengendalian lain tidak efektif.</p>
+					
 					
 					<br>
 
