--- a/app/templates/Yellowwish.html
+++ b/app/templates/Yellowwish.html
@@ -44,7 +44,7 @@
 
     <div>
         <br>
-        <h1 style="text-align:center" class="fw-semi-bold mb-4">Prediksi&nbsp;<span class="text-light"> Penyakit </span> &nbsp; Daun Cabai & Obatnya</h1>
+        <h1 style="text-align:center" class="fw-semi-bold mb-4">Prediksi&nbsp;<span class="text-light"> Penyakit </span> &nbsp; Daun Cabai & Penangananya</h1>
     </div>
 
    <br>
@@ -71,11 +71,17 @@
                 </div>
                 <div class="details">
 					
-					<h4><b> Treatment : </b> </h4>
+					<h4><b> Perawatannya : </b> </h4>
                     <h6>
+                        Yellowish adalah salah satu penyakit penting pada tanaman cabai adalah penyakit kuning yang disebabkan oleh virus gemini.
+                        gejalanya berupa helai daun yang mengalami perubahan warna dengan bagian tulang daun memutih (vein clearing), lalu gejala akan berkembang menjadi warna kuning, bagian tulang daun menebal, dan daun mengeriting ke arah atas. infeksi lebih lanjut menyebabkan daun-daun mengecil dan berwarna kuning terang. jika tanaman terserang pada umur muda, biasanya tanaman menjadi kerdil dan tidak berbuah.
+                        penyakit yang disebabkan oleh virus memang relatif sulit dikendalikan dan hingga saat ini belum ada pestisida yang dapat mematikan virus, sehingga tindakan yang paling tepat adalah upaya pencegahan. penyakit kuning dapat ditularkan oleh serangga kutu kebul (bemisia tabaci) sehingga serangga penularnya juga harus dikendalikan.
+                        <p>langkah-langkah pencegahan dan pengendalian penyakit kuning antara lain:</p>
+                        <p>1.penanaman varietas yang agak tahan (karena belum ada yang benar-benar tahan terhadap serangan virus kuning)</p>
+                        <p>2.pemberian pupuk organik (pupuk kandang/kompos)</p>
+                        <p>3.penggunaan bibit yang sehat dan tidak berasal dari daerah yang pernah terserang penyakit kuning</p>
+                        <p>4.pergiliran tanaman dengan tanaman yang bukan inang virus. disarankan setelah menanam cabai tidak menanam tanaman dari famili solanaceae (tomat, kentang, terung,  tembakau), dan cucurbitaceae (mentimun). pergiliran tanaman diusahakan dilakukan secara serempak dalam satu musim tanam</p>
 
-					Many fungicides are registered to control of target spot on Chilies. Growers should consult regional disease management guides for recommended products. Products containing chlorothalonil, mancozeb, and copper oxychloride have been shown to provide good control of target spot in research trials
-					
 					<br>
 
                     </h6>
