--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -288,11 +288,11 @@
                         <div class="card-body my-3">
                           <div class="align-items-xl-center d-block d-xl-flex px-3"><img class="img-fluid me-3 me-md-2 me-lg-3" src={{ url_for('static', filename='/img/gallery/cabai.png') }} width="50" alt="" />
                             <div class="flex-1 align-items-center pt-2">
-                              <h5 class="mb-0 fw-bold text-success">Fernando Soler</h5>
-                              <p class="fw-normal text-black">Telecommunication Engineer</p>
+                              <h5 class="mb-0 fw-bold text-success">Harga Cabai</h5>
+                              <p class="fw-normal text-black">Kementerian Perdagangan, Jakarta, Kamis, 4/5/2023</p>
                             </div>
                           </div>
-                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae</p>
+                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;Rp 25 ribu, di Papua aja Rp 20 ribu di Makassar Rp 25 ribu," kata Zulkifli Hasan saat ditemui di Kantor</p>
                         </div>
                       </div>
                     </div>
@@ -301,11 +301,12 @@
                         <div class="card-body my-3">
                           <div class="align-items-xl-center d-block d-xl-flex px-3"><img class="img-fluid me-3 me-md-2 me-lg-3" src={{ url_for('static', filename='/img/gallery/cabai.png') }} width="50" alt="" />
                             <div class="flex-1 align-items-center pt-2">
-                              <h5 class="mb-0 fw-bold text-success">Ilone Pickford</h5>
-                              <p class="fw-normal text-black">Head of Agrogofund </p>
+                              <h5 class="mb-0 fw-bold text-success">Harga Pupuk</h5>
+                              <p class="fw-normal text-black">Pupuk Dasar Cabai</p>
                             </div>
                           </div>
-                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium </p>
+                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;,Pupuk dasar adalah pupuk yang diberikan pada lahan bedengan sebelum bibit di tanam. Jenis-jenis pupuk dasar yang bagus untuk tanaman cabe antara lain pupuk kandang/kompos, Urea/Za, TSP/SP36, KCl, Dolomit/Kaptan (Kalsium dan Magnesium). Bisa juga menggunakan pupuk NPK Phonska Dengan Harga 250 ribu hingga 285 ribu Per Sak
+                          </p>
                         </div>
                       </div>
                     </div>
@@ -314,11 +315,13 @@
                         <div class="card-body my-3">
                           <div class="align-items-xl-center d-block d-xl-flex px-3"><img class="img-fluid me-3 me-md-2 me-lg-3" src={{ url_for('static', filename='/img/gallery/cabai.png' )}} width="50" alt="" />
                             <div class="flex-1 align-items-center pt-2">
-                              <h5 class="mb-0 fw-bold text-success">Ed O’Brien</h5>
-                              <p class="fw-normal text-black">Herbalist</p>
+                              <h5 class="mb-0 fw-bold text-success">Harga Pupuk</h5>
+                              <p class="fw-normal text-black">Pupuk Susulan Tanaman Cabe Fase Vegetatif
+                              </p>
                             </div>
                           </div>
-                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium </p>
+                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;Fase ini adalah fase pertumbuhan awal tanaman cabai hingga menjelang berbunga, yaitu umur 0 HST – 21 HST.
+                          </p>
                         </div>
                       </div>
                     </div>
@@ -331,11 +334,11 @@
                         <div class="card-body my-3">
                           <div class="align-items-xl-center d-block d-xl-flex px-3"><img class="img-fluid me-3 me-md-2 me-lg-3" src={{ url_for('static', filename='/img/gallery/cabai.png')}} width="50" alt="" />
                             <div class="flex-1 align-items-center pt-2">
-                              <h5 class="mb-0 fw-bold text-success">Fernando Soler</h5>
-                              <p class="fw-normal text-black">Telecommunication Engineer</p>
+                              <h5 class="mb-0 fw-bold text-success">Harga Pupuk</h5>
+                              <p class="fw-normal text-black">Pemberian Pupuk Daun (Pupuk Mikro)</p>
                             </div>
                           </div>
-                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae</p>
+                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;Pupuk daun bisa diberikan sejak tanaman cabai umur 7 HST dan diulangi setiap 7 hari sekali , Harga Pupuk ini sekitar 35.Ribu/100 ML</p>
                         </div>
                       </div>
                     </div>
@@ -344,11 +347,13 @@
                         <div class="card-body my-3">
                           <div class="align-items-xl-center d-block d-xl-flex px-3"><img class="img-fluid me-3 me-md-2 me-lg-3" src={{ url_for('static', filename='/img/gallery/cabai.png')}} width="50" alt="" />
                             <div class="flex-1 align-items-center pt-2">
-                              <h5 class="mb-0 fw-bold text-success">Ilone Pickford</h5>
-                              <p class="fw-normal text-black">Head of Agrogofund Groups </p>
+                              <h5 class="mb-0 fw-bold text-success">Harga Pupuk</h5>
+                              <p class="fw-normal text-black">Pupuk Susulan Tanaman Cabai Fase Generatif</p>
                             </div>
                           </div>
-                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium </p>
+                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;
+                            Pada fase ini adalah saat-saat dimana tanaman cabe mulai membentuk bunga, bakal buah dan membentuk buah
+                            </p>
                         </div>
                       </div>
                     </div>
@@ -357,11 +362,11 @@
                         <div class="card-body my-3">
                           <div class="align-items-xl-center d-block d-xl-flex px-3"><img class="img-fluid me-3 me-md-2 me-lg-3" src={{ url_for('static', filename='/img/gallery/cabai.png')}} width="50" alt="" />
                             <div class="flex-1 align-items-center pt-2">
-                              <h5 class="mb-0 fw-bold text-success">Ed O’Brien</h5>
-                              <p class="fw-normal text-black">Herbalist</p>
+                              <h5 class="mb-0 fw-bold text-success">Harga Pupuk</h5>
+                              <p class="fw-normal text-black">Pemberian Pupuk Daun (Pupuk Mikro)</p>
                             </div>
                           </div>
-                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;Ui dolorem eum fugiat quo voluptas nulla pariatur? At vero eos et accusamus et iusto odio</p>
+                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;Pupuk daun bisa diberikan sejak tanaman cabai umur 7 HST dan diulangi setiap 7 hari sekali , Harga Pupuk ini sekitar 35.Ribu/100 ML</p>
                         </div>
                       </div>
                     </div>
@@ -374,11 +379,11 @@
                         <div class="card-body my-3">
                           <div class="align-items-xl-center d-block d-xl-flex px-3"><img class="img-fluid me-3 me-md-2 me-lg-3" src={{ url_for('static', filename='/img/gallery/cabai.png')}} width="50" alt="" />
                             <div class="flex-1 align-items-center pt-2">
-                              <h5 class="mb-0 fw-bold text-success">Fernando Soler</h5>
-                              <p class="fw-normal text-black">Telecommunication Engineer</p>
+                              <h5 class="mb-0 fw-bold text-success">Harga Cabai</h5>
+                              <p class="fw-normal text-black">Jawa Tengah</p>
                             </div>
                           </div>
-                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae</p>
+                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;Sejumlah  harga pangan di Jawa Tengah mengalami kenaikan, Kenaikan harga pangan terjadi pada cabai rawit merah , harga naik: Rp30.650/kg  dan Cabai merah keriting, harga naik:Rp27.700/kg</p>
                         </div>
                       </div>
                     </div>
@@ -387,11 +392,11 @@
                         <div class="card-body my-3">
                           <div class="align-items-xl-center d-block d-xl-flex px-3"><img class="img-fluid me-3 me-md-2 me-lg-3" src={{ url_for('static', filename='/img/gallery/cabai.png') }} width="50" alt="" />
                             <div class="flex-1 align-items-center pt-2">
-                              <h5 class="mb-0 fw-bold text-success">-</h5>
-                              <p class="fw-normal text-black">-</p>
+                              <h5 class="mb-0 fw-bold text-success">Harga Cabai</h5>
+                              <p class="fw-normal text-black">Umum</p>
                             </div>
                           </div>
-                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;-</p>
+                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;-Saat ini harga cabai rawit di tingkat petani sudah mencapai Rp 60 ribu per kilogram. Jauh di atas harga acuan yang berkisar Rp 25.000 hingga Rp 31.500 per kilogram.</p>
                         </div>
                       </div>
                     </div>
