--- a/app/templates/Antracnose.html
+++ b/app/templates/Antracnose.html
@@ -42,7 +42,7 @@
 
     <div>
         <br>
-        <h1 style="text-align:center" class="fw-semi-bold mb-4">Prediksi&nbsp;<span class="text-light"> Penyakit </span> &nbsp; Daun Cabai & Obatnya</h1>
+        <h1 style="text-align:center" class="fw-semi-bold mb-4">Prediksi&nbsp;<span class="text-light"> Penyakit </span> &nbsp; Daun Cabai & Penangananya</h1>
     </div>
     <br>
 
@@ -61,13 +61,19 @@
                 </div>
                 <div class="details">
 					
-					<h4><b> Treatment : </b> </h4>
+					<h4><b> Perawatan : </b> </h4>
                     <h6>
+Antraknosa adalah penyakit yang umum terjadi pada tanaman cabai dan dapat menyebabkan kerugian besar pada hasil panen. Penyakit ini disebabkan oleh jamur Colletotrichum spp. yang menyerang daun, batang, dan buah cabai. Untuk mengatasi penyakit antraknosa pada cabai, diperlukan pendekatan yang terintegrasi melalui tindakan budidaya, sanitasi, dan penggunaan agen pengendalian hayati. Berikut ini adalah beberapa langkah yang dapat diambil untuk menangani penyakit antraknosa pada cabai secara efektif:
 
+<p>1. Pemilihan bibit yang tahan</p>
 
-                        
-                        Chilies that have early blight require immediate attention before the disease takes over the plants. Thoroughly spray the plant (bottoms of leaves also) with Bonide Liquid Copper Fungicide concentrate or Bonide Chili & Vegetable. Both of these treatments are organic..</br></br>
-                        
+<p>2. Rotasi tanaman</p>
+
+<p>3. Sanitasi</p>
+
+<p>4. Irigasi yang tepat</p>
+
+<p>5. Pengelolaan gulma</p>
 
                     </h6>
                 </div>
