--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -305,7 +305,7 @@
                               <p class="fw-normal text-black">Pupuk Dasar Cabai</p>
                             </div>
                           </div>
-                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;,Pupuk dasar adalah pupuk yang diberikan pada lahan bedengan sebelum bibit di tanam. Jenis-jenis pupuk dasar yang bagus untuk tanaman cabe antara lain pupuk kandang/kompos, Urea/Za, TSP/SP36, KCl, Dolomit/Kaptan (Kalsium dan Magnesium). Bisa juga menggunakan pupuk NPK Phonska Dengan Harga 250 ribu hingga 285 ribu Per Sak
+                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;Pupuk dasar adalah pupuk yang diberikan pada lahan bedengan sebelum bibit di tanam. Jenis-jenis pupuk dasar yang bagus untuk tanaman cabe antara lain pupuk kandang/kompos, Urea/Za, TSP/SP36, KCl, Dolomit/Kaptan (Kalsium dan Magnesium). Bisa juga menggunakan pupuk NPK Phonska Dengan Harga 250 ribu hingga 285 ribu Per Sak
                           </p>
                         </div>
                       </div>
@@ -396,7 +396,7 @@
                               <p class="fw-normal text-black">Umum</p>
                             </div>
                           </div>
-                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;-Saat ini harga cabai rawit di tingkat petani sudah mencapai Rp 60 ribu per kilogram. Jauh di atas harga acuan yang berkisar Rp 25.000 hingga Rp 31.500 per kilogram.</p>
+                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;Saat ini harga cabai rawit di tingkat petani sudah mencapai Rp 60 ribu per kilogram. Jauh di atas harga acuan yang berkisar Rp 25.000 hingga Rp 31.500 per kilogram.</p>
                         </div>
                       </div>
                     </div>
@@ -405,11 +405,13 @@
                         <div class="card-body my-3">
                           <div class="align-items-xl-center d-block d-xl-flex px-3"><img class="img-fluid me-3 me-md-2 me-lg-3" src={{ url_for('static', filename='/img/gallery/cabai.png') }} width="50" alt="" />
                             <div class="flex-1 align-items-center pt-2">
-                              <h5 class="mb-0 fw-bold text-success">-</h5>
-                              <p class="fw-normal text-black">-</p>
+                              <h5 class="mb-0 fw-bold text-success">Harga Cabai</h5>
+                              <p class="fw-normal text-black">https://money.kompas.com/</p>
                             </div>
                           </div>
-                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;-</p>
+                          <p class="mb-0 px-3 px-md-2 px-xxl-3">&quot;Cabai adalah salah satu komoditas pangan yang paling sering naik ketika perayaan Hari Raya Lebaran. Adapun harga cabai merah besar terpantau naik Rp 2.550 menjadi Rp 50.150 per kilogram. Pun dengan Cabai Merah Keriting yang naik Rp 2.450 menjadi Rp 45.300.
+
+                            </p>
                         </div>
                       </div>
                     </div>
