--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -196,14 +196,15 @@
                             fileInput.files = event.dataTransfer.files;
                           }
                         </script>
-                        
-                        
                     </div>
                     
                     </div>
                   </div>
                 </div>
-               
+              </div>
+            </div>
+          </div>
+        </div>
       </section><!-- <section> close ============================-->
       <!-- ============================================-->
 
